fix room table alignment

--- a/static/chair/css/managers.css
+++ b/static/chair/css/managers.css
@@ -1,76 +1,80 @@
 * {
-   font-family: "Open Sans";
-   margin: 0px;
+    font-family: "Open Sans";
+    margin: 0px;
 }
 
 .container-fluid {
-   width: 95%;
+    width: 95%;
 }
 
 .title {
-   text-align: center;
-   margin-top: -20px;
+    text-align: center;
+    margin-top: -20px;
 }
 
 
 /* Removes gutters added by Bootstrap */
 
 .no-gutter {
-   padding: 0px;
+    padding: 0px;
 }
 
 .table {
-   margin-top: 10px;
+    margin-top: 10px;
 }
 
 .preference-btn {
-   font-weight: 600;
-   border: 2px solid #aaaaaa;
+    font-weight: 600;
+    border: 2px solid #aaaaaa;
 }
 
 .checkbox {
-   padding: 0px;
-   margin: 0px;
+    padding: 0px;
+    margin: 0px;
 }
 
 .add-text {
-   font-size: 14px;
-   font-weight: 600;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .modal-title {
-   text-align: center;
+    text-align: center;
 }
 
 .modal-row {
-   padding-bottom: 10px;
-   margin-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 10px;
 }
 
 .noresize {
-   resize: none;
+    resize: none;
 }
 
 .add-btns {
-   width: 100%;
+    width: 100%;
 }
 
 .preference-table {
-   display: block;
-   height: 200px;
-   overflow: auto;
-   margin-bottom: 10px;
+    display: block;
+    height: 200px;
+    overflow: auto;
+    margin-bottom: 10px;
 }
 
 .preference-modal {
-   height: 600px;
+    height: 600px;
 }
 
 .room-types-editor {
-   max-height: 300px;
-   overflow: auto;
+    max-height: 300px;
+    overflow: auto;
 }
 
 .rooms-table {
-   margin-top: 20px;
+    margin-top: 20px;
+}
+
+th {
+    text-align: left;
 }
